<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".eyequestions.EyeQ2Activity"
    android:background="@drawable/tlo2">
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="600dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="59dp"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    <TextView
        android:id="@+id/mTextQ"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:text="@string/eyeQ2Text"
        android:layout_marginTop="130dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
        android:gravity="center">
        <Button
            android:id="@+id/mButtonYes"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Tak"
            android:backgroundTint="#FFB2FF59"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mCheckBoxNo" />
        <Button
            android:id="@+id/mButtonNo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Nie"
            android:backgroundTint="#FFFF5252"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mCheckBoxNo" />
    </LinearLayout>
    <Button
        android:id="@+id/mButtonNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#000000"
        android:text="@string/ButtonNextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mCheckBoxNo" />

        <Button
            android:id="@+id/mButtonBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#000000"
            android:text="@string/BackText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mCheckBoxNo" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>